# fmri-tool

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
fmritool/: cli.py  glm.py  io_utils.py  pipeline.py  preprocess.py  rest.py  viz.py
