[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fmritool"
version = "0.1.0"
description = "Tiny, beginner-friendly fMRI analysis helper (demo)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nilearn",
    "nibabel",
    "typer",
    "rich",
    "matplotlib",
    "reportlab"
]

[project.scripts]
fmritool = "fmritool.cli:app"

[tool.setuptools.packages.find]
include = ["fmritool*"]
exclude = ["app*", "tests*", "examples*"]
